[package]
name = "registry-indexer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow          = "1.0"
chrono          = { version = "0.4", features = ["clock"] }
clap            = { version = "4.5", features = ["derive"] }
registry-common = { path = "../common" }
semver          = "1.0"
serde           = { version = "1.0", features = ["derive"] }
serde_json      = "1.0"
toml            = "0.8"
wait-timeout    = "0.2"
walkdir         = "2.5"
