[package]
name = "registry-worker"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
registry-common = { path = "../common" }
serde           = { version = "1.0", features = ["derive"] }
serde_json      = "1.0"
worker          = "0.8.5"
